--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,11 +2,12 @@
   "name": "todo-app",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -22,6 +23,8 @@
     "@emotion/babel-plugin": "^11.10.5",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
     "@vitejs/plugin-react": "^3.0.0",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.5.0",
