--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint"
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx, src --fix"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -28,6 +28,7 @@
     "@vitejs/plugin-react": "^3.0.0",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.1",
     "typescript": "^4.9.3",
